# airq

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
apps/account/: admin.py  managers.py  models.py
apps/account/api_endpoints/auth/: __init__.py
apps/account/api_endpoints/auth/Login/: serializers.py  views.py
apps/account/api_endpoints/auth/Register/: serializers.py  views.py
apps/account/api_endpoints/social_auth/: __init__.py  register.py
apps/account/api_endpoints/social_auth/FacebookAuth/: __init__.py  facebook_auth.py  serializers.py  views.py
apps/account/api_endpoints/social_auth/GoogleAuth/: google.py  serializers.py  views.py
apps/account/migrations/: 0001_initial.py
apps/account/urls/: v1.py
apps/monitoring/: admin.py  models.py
apps/monitoring/api_endpoints/current/: serializers.py  services.py  views.py
apps/monitoring/api_endpoints/history/: serializers.py  services.py  views.py
apps/monitoring/migrations/: 0001_initial.py  0002_history.py
apps/monitoring/urls/: v1.py
apps/shared/: models.py
compose/django/: Dockerfile  entrypoint
compose/nginx/: Dockerfile  nginx.conf
config/: asgi.py  schema_generators.py  settings.py  urls.py  wsgi.py
config/utils/: handlers.py
